<resources>
    <string name="app_name">HKR Schedule</string>
    <string name="enter">Enter</string>
    <string name="enter_a_website">Enter a website</string>
    <string name="program">Program</string>
    <string name="teacher">Teacher</string>
    <string name="room">Room</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="info">Info</string>
    <string name="change_schedule">Change Schedule</string>
    <string name="english">English</string>
    <string name="backtomain">BackToMain</string>
    <string name="hkr_schedule">HKR Schedule</string>
    <string name="settings">Settings</string>
    <string name="open">open_drawer</string>
    <string name="close">close_drawer</string>
    <string name="app_widget_description">Schedule Widget</string>
    <string name="white_theme">Light mode</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="timeline">Timeline</string>
    <string name="schedule">Schedule</string>
    <string name="todo">TODO</string>
    <string name="endtime">EndTime</string>
    <string name="starttime">StartTime</string>
    <string name="classdetails">ClassDetails</string>
    <string name="difference">Difference</string>
</resources>