<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/object_layout"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="40dp"
    android:paddingBottom="40dp">

    <TextView
        android:id="@+id/Course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/habibi"
        android:text="@string/program"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Course"
        android:text="@string/teacher"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="180dp"
        android:fontFamily="@font/aleo"
        android:textSize="17sp"
        android:id="@+id/Teacher"/>


    <TextView
        android:id="@+id/Room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Teacher"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/ibm_plex_mono_semibold"
        android:text="@string/room"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Course"
        android:layout_marginTop="7dp"
        android:gravity="end"
        android:id="@+id/Date"
        android:textSize="17sp"
        android:fontFamily="@font/aleo_bold"
        android:text="@string/date"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Date"
        android:gravity="end"
        android:text="@string/duration"
        android:textSize="17sp"
        android:id="@+id/Duration"
        android:fontFamily="@font/alata"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Info"
        android:layout_below="@+id/Room"
        android:text="@string/info"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:fontFamily="@font/aleo"
        android:textSize="17sp"/>

</RelativeLayout>