<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AA8D8D"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/equal_size_rectangle"
        android:fontFamily="@font/aleo"
        android:text="@string/settings"
        android:textSize="100sp"
        android:textColor="#000"/>

    <Switch
        android:id="@+id/EnglishSwitchInSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/alata"
        android:text="@string/english"
        android:textSize="40sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/ChangeScheduleInSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EnglishSwitchInSettings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/corner"
        android:textColor="#000"
        android:text="@string/change_schedule" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/ChangeScheduleInSettings"
        android:contentDescription="@string/backtomain"
        android:id="@+id/BackInSettings"
        android:src="@drawable/ic_back"
        />

</RelativeLayout>