<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/object_layout"
    android:paddingStart="10dp"
    android:animateLayoutChanges="true"
    android:paddingEnd="10dp"
    android:paddingTop="10dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/MonthLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/WeekAndMonth"
            android:textAlignment="center"
            android:text="Week 9, April 16 - 20"
            android:textColor="@color/platinum"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/Yellow"
            android:layout_marginStart="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/test">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/TimeLineDate"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Wed"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/habibi"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/platinum"
                    android:textAlignment="center"
                    android:id="@+id/Day"/>


                <TextView
                    android:id="@+id/Date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:text="25"
                    android:textAlignment="center"
                    android:textColor="@color/platinum"
                    android:textSize="20sp" />

            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/TimeLineSchedule"
            android:orientation="vertical"
            android:background="@drawable/gradient">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="15dp"
                tools:ignore="UselessParent">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TimeDetails"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/starttime"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:id="@+id/StartTime"
                        android:textColor="@color/black"
                        android:background="@drawable/small_corner"
                        android:backgroundTint="@color/Yellow"
                        android:textStyle="bold"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/endtime"
                        android:textColor="@color/white"
                        android:layout_gravity="end"
                        android:id="@+id/EndTime"
                        android:layout_below="@+id/StartTime"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textStyle="bold"
                        android:textSize="30sp"/>

                    <ImageView
                        android:id="@+id/clock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@id/StartTime"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/time" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/clock"
                        android:gravity="center"
                        android:layout_centerVertical="true"
                        android:textAlignment="center"
                        android:text="@string/difference"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/orange"
                        android:textSize="15sp"
                        android:id="@+id/difference"/>

                </RelativeLayout>


                <TextView
                    android:id="@+id/Course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TimeDetails"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/habibi"
                    android:layout_marginStart="5dp"
                    android:gravity="start"
                    android:text="@string/program"
                    android:textColor="@color/platinum"
                    android:textSize="20sp" />



            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_rect"
                android:backgroundTint="@color/darkGrey">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="15dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teacher"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/habibi"
                    android:layout_toStartOf="@id/Person"
                    android:layout_marginEnd="5dp"
                    android:paddingStart="90dp"
                    android:textSize="17sp"
                    android:gravity="end"
                    android:id="@+id/Teacher"
                    android:textColor="@color/platinum"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Person"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/person" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Location"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/location"/>

                <TextView
                    android:id="@+id/Room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/Location"
                    android:fontFamily="@font/habibi"
                    android:text="@string/room"
                    android:textSize="17sp"
                    android:textColor="@color/platinum"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Teacher"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:id="@+id/Details"
                    android:background="@drawable/small_corner"
                    android:backgroundTint="@color/Yellow"
                    android:text="@string/info"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>


            </RelativeLayout>



            </RelativeLayout>

        </LinearLayout>





    </LinearLayout>


</LinearLayout>